name:         transformers
version:      0.0
license:      BSD3
license-file: LICENSE
author:       Andy Gill
maintainer:   libraries@haskell.org
category:     Control
synopsis:     Concrete monad transformers
description:
    Haskell 98 part of a monad transformer library, inspired by the paper
    /Functional Programming with Overloading and Higher-Order Polymorphism/,
    by Mark P Jones, in /Advanced School of Functional Programming/, 1995
    (<http://web.cecs.pdx.edu/~mpj/pubs/springschool.html>).
build-type: Simple
ghc-options: -Wall
exposed-modules:
    Control.Monad.Identity
    Control.Monad.Trans
    Control.Monad.Trans.Cont
    Control.Monad.Trans.Error
    Control.Monad.Trans.List
    Control.Monad.Trans.Reader
    Control.Monad.Trans.RWS
    Control.Monad.Trans.RWS.Lazy
    Control.Monad.Trans.RWS.Strict
    Control.Monad.Trans.State
    Control.Monad.Trans.State.Lazy
    Control.Monad.Trans.State.Strict
    Control.Monad.Trans.Writer
    Control.Monad.Trans.Writer.Lazy
    Control.Monad.Trans.Writer.Strict
build-depends: base
